knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/LoanRepayment__c.field-meta.xml
<CustomField>
    <fullName>LoanRepayment__c</fullName>
    <description>Loan Repayment for PracticeLink XML Feed</description>
    <inlineHelpText>Loan Repayment for PracticeLink</inlineHelpText>
    <label>Loan Repayment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>