knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Location2__c.field-meta.xml
<CustomField>
    <fullName>Location2__c</fullName>
    <formula>Facility_Name__r.BillingCity
+ &quot;, &quot; + 
( text(Facility_Name__r.BillingStateCode))</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>