knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Locums_Buyout__c.field-meta.xml
<CustomField>
    <fullName>Locums_Buyout__c</fullName>
    <label>Locums Buyout</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>