knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Malpractice_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Coverage__c</fullName>
    <label>Malpractice Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>