knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Monthly_Hours_Requested__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Hours_Requested__c</fullName>
    <description>These are the Monthly Hours Requested</description>
    <inlineHelpText>The Monthly Hours Requested</inlineHelpText>
    <label>Monthly Hours Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>