knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Moonlighting__c.field-meta.xml
<CustomField>
    <fullName>Moonlighting__c</fullName>
    <label>Moonlighting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>