knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/More_Info_Link__c.field-meta.xml
<CustomField>
    <fullName>More_Info_Link__c</fullName>
    <description>More Info Link for Doximity XML Feed</description>
    <inlineHelpText>More Info Link for Doximity</inlineHelpText>
    <label>More Info Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>