knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/New_Grad_Bonus__c.field-meta.xml
<CustomField>
    <fullName>New_Grad_Bonus__c</fullName>
    <label>New Grad Bonus</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>