knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Night_Rate__c.field-meta.xml
<CustomField>
    <fullName>Night_Rate__c</fullName>
    <label>Night Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>