knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/No_Non_Compete__c.field-meta.xml
<CustomField>
    <fullName>No_Non_Compete__c</fullName>
    <label>No Non-Compete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>