knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Offer_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Offer_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the person approving the offer</description>
    <inlineHelpText>This is the person approving the offer</inlineHelpText>
    <label>Offer Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>