knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Open_to_Resident_Moonlighting__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Resident_Moonlighting__c</fullName>
    <description>This job accepts people finishing their residency open to moonlighting</description>
    <inlineHelpText>This job accepts clinicians currently in their residency program</inlineHelpText>
    <label>Open to Resident Moonlighting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>