knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Open_to_Residents__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Residents__c</fullName>
    <description>This job accepts people finishing their residency</description>
    <inlineHelpText>This job accepts people finishing their residency</inlineHelpText>
    <label>Open to Residents?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>