knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Placement_Commitment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Placement_Commitment_Formula__c</fullName>
    <formula>Placement_Commitment_Hours__c +  Hours_Filled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Commitment Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>