knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Placement_Commitment_Hours__c.field-meta.xml
<CustomField>
    <fullName>Placement_Commitment_Hours__c</fullName>
    <label>Placement Commitment Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>