knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Planned_Status__c.field-meta.xml
<CustomField>
    <fullName>Planned_Status__c</fullName>
    <description>The status of the job</description>
    <inlineHelpText>The status of the job</inlineHelpText>
    <label>Planned Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>PRN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>