knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/PositionType__c.field-meta.xml
<CustomField>
    <fullName>PositionType__c</fullName>
    <description>PositionType for Corporate Public Site XML Feed</description>
    <inlineHelpText>PositionType for Corporate Public Site</inlineHelpText>
    <label>PositionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>