knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Post_Bonus_Cap__c.field-meta.xml
<CustomField>
    <fullName>Post_Bonus_Cap__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, will create and post the Posted Bonus Phrase from the Bonus Cap</inlineHelpText>
    <label>Post Bonus Cap?</label>
    <type>Checkbox</type>
</CustomField>