knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Post_Compensation_Cap__c.field-meta.xml
<CustomField>
    <fullName>Post_Compensation_Cap__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, will create and post the Posted Compensation Phrase from the Compensation Cap</inlineHelpText>
    <label>Post Compensation Cap?</label>
    <type>Checkbox</type>
</CustomField>