knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Practice_Type__c.field-meta.xml
<CustomField>
    <fullName>Practice_Type__c</fullName>
    <description>Practice Type for Doximity XML Feed</description>
    <inlineHelpText>Practice Type for Doximity</inlineHelpText>
    <label>Practice Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>