knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/PracticeLink_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>PracticeLink_Facility_ID__c</fullName>
    <description>References the PracticeLink Facility ID number on the Account/Facility record</description>
    <formula>bpats__Account__r.PracticeLink_Facility_ID__c</formula>
    <inlineHelpText>References the PracticeLink Facility ID number on the Facility</inlineHelpText>
    <label>PracticeLink Facility ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>