knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <description>Profession for PracticeMatch XML Feed</description>
    <inlineHelpText>Profession for PracticeMatch</inlineHelpText>
    <label>Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>