knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/ProfessionID__c.field-meta.xml
<CustomField>
    <fullName>ProfessionID__c</fullName>
    <description>Profession ID for PracticeLink XML Feed</description>
    <inlineHelpText>Profession ID for PracticeLink</inlineHelpText>
    <label>Profession ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>