knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the recruiter</description>
    <inlineHelpText>This is the recruiter</inlineHelpText>
    <label>Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>