knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/RegionCommunityCityDescription__c.field-meta.xml
<CustomField>
    <fullName>RegionCommunityCityDescription__c</fullName>
    <description>Region Community City Description for PracticeMatch XML Feed</description>
    <inlineHelpText>Region Community City Description for PracticeMatch</inlineHelpText>
    <label>Region Community City Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>