knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Relocation_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Bonus__c</fullName>
    <label>Relocation Bonus</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>