knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>This is the type of requisition</description>
    <inlineHelpText>This is the type of requisition</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Requisition</fullName>
            </value>
            <value>
                <fullName>Update Requisition</fullName>
            </value>
            <value>
                <fullName>Cancel Requisition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>