knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <description>This is the person who created the job requisition</description>
    <formula>HYPERLINK( CreatedById , CreatedBy.FirstName  + &quot; &quot; + CreatedBy.LastName , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the person who created the job requisition</inlineHelpText>
    <label>Requestor</label>
    <type>Text</type>
</CustomField>