knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/RMO2__c.field-meta.xml
<CustomField>
    <fullName>RMO2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs3</relationshipName>
    <type>Lookup</type>
</CustomField>