knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Salary_State__c.field-meta.xml
<CustomField>
    <fullName>Salary_State__c</fullName>
    <description>Not visible on the job record, used to display the salary on the job board record</description>
    <formula>IF ( Show_Salary_Checkbox__c = TRUE, bpats__Salary__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not visible on the job record, used to display the salary on the job board record</inlineHelpText>
    <label>Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>