knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Scheduling__c</fullName>
    <label>Scheduling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>