knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Select_Job_Boards__c.field-meta.xml
<CustomField>
    <fullName>Select_Job_Boards__c</fullName>
    <label>Select Job Boards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>DocCafe</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Practice Match</fullName>
            </value>
            <value>
                <fullName>PracticeLink</fullName>
            </value>
            <value>
                <fullName>Doximity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>