knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Service_Line2__c.field-meta.xml
<CustomField>
    <fullName>Service_Line2__c</fullName>
    <formula>Facility_Name__r.Service_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Line</label>
    <type>Text</type>
</CustomField>