knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Service_Line_Parent__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Parent__c</fullName>
    <description>For use on the Asymbl Job Board to enable filtering by a picklist</description>
    <inlineHelpText>Picklist with the Service Line Parent so it can be filtered on the Job Board</inlineHelpText>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCARE</fullName>
                <label>Critical Care</label>
            </value>
            <value>
                <fullName>EM</fullName>
                <label>Emergency Medicine</label>
            </value>
            <value>
                <fullName>HM</fullName>
                <label>Hospital Medicine</label>
            </value>
            <value>
                <fullName>UC</fullName>
                <label>Urgent Care</label>
            </value>
            <value>
                <fullName>VH</fullName>
                <label>Virtual Health</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
                <isActive>false</isActive>
                <label>Core</label>
            </value>
            <value>
                <fullName>Non Core</fullName>
                <isActive>false</isActive>
                <label>Non Core</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>