knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Service_Line_Parent_API__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Parent_API__c</fullName>
    <description>This returns the API Name field from the Facility&apos;s Service Line&apos;s Parent for use with the Job Board XML Feed</description>
    <formula>Facility_Name__r.Service_Line__r.Parent__r.API_Name__c</formula>
    <inlineHelpText>This returns the API Name field from the Facility&apos;s Service Line&apos;s Parent for use with the Job Board XML Feed</inlineHelpText>
    <label>Service Line Parent API</label>
    <type>Text</type>
</CustomField>