knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/SFO2__c.field-meta.xml
<CustomField>
    <fullName>SFO2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up user id for SFO on account team</description>
    <label>SFO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SFO</relationshipName>
    <type>Lookup</type>
</CustomField>