knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <description>This is the type of shift</description>
    <inlineHelpText>This is the type of shift</inlineHelpText>
    <label>Shift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Day Admitter</fullName>
            </value>
            <value>
                <fullName>GME</fullName>
            </value>
            <value>
                <fullName>Swing</fullName>
            </value>
            <value>
                <fullName>Swing Admitter</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>