knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Show_Salary_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Show_Salary_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays the salary (salary_state) on the job board record</description>
    <inlineHelpText>Displays the salary on the job board record</inlineHelpText>
    <label>Show Salary</label>
    <type>Checkbox</type>
</CustomField>