knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/SiteID__c.field-meta.xml
<CustomField>
    <fullName>SiteID__c</fullName>
    <description>Site ID for PracticeMatch XML Feed</description>
    <inlineHelpText>Site ID for PracticeMatch</inlineHelpText>
    <label>Site ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>