knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/SiteLocationDescription__c.field-meta.xml
<CustomField>
    <fullName>SiteLocationDescription__c</fullName>
    <description>Site Location Description for PracticeMatch XML Feed</description>
    <inlineHelpText>Site Location Description for PracticeMatch</inlineHelpText>
    <label>Site Location Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>