knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/SiteName__c.field-meta.xml
<CustomField>
    <fullName>SiteName__c</fullName>
    <description>Site Name for PracticeMatch XML Feed</description>
    <inlineHelpText>Site Name for PracticeMatch</inlineHelpText>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>