knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/SM_Sync__c.field-meta.xml
<CustomField>
    <fullName>SM_Sync__c</fullName>
    <formula>AND(
    NOT(TEXT(bpats__Status__c) = &quot;Canceled&quot;),
    NOT(TEXT(bpats__Status__c) = &quot;Filled&quot;),
    NOT(bpats__Is_Closed__c)
)</formula>
    <label>SM Sync</label>
    <type>Checkbox</type>
</CustomField>