knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/SpecialityID__c.field-meta.xml
<CustomField>
    <fullName>SpecialityID__c</fullName>
    <description>Speciality ID for PracticeLink XML Feed</description>
    <inlineHelpText>Speciality ID for PracticeLink</inlineHelpText>
    <label>Speciality ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>