knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/specialtiesSpeciality__c.field-meta.xml
<CustomField>
    <fullName>specialtiesSpeciality__c</fullName>
    <description>Specialities.speciality for Doximity XML Feed</description>
    <inlineHelpText>Specialities.speciality for Doximity</inlineHelpText>
    <label>specialties.speciality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>