knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <description>Speciality for PracticeMatch XML Feed</description>
    <inlineHelpText>Speciality for PracticeMatch</inlineHelpText>
    <label>Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>