knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/SpecName__c.field-meta.xml
<CustomField>
    <fullName>SpecName__c</fullName>
    <description>SpecName for XML Feed - DocCafe</description>
    <inlineHelpText>specName for DocCafe</inlineHelpText>
    <label>SpecName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>