knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State field for use in Job Board XML Feed</description>
    <inlineHelpText>State of Job Location</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>