knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>This is the Team</description>
    <inlineHelpText>This is the type of team</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core EM</fullName>
            </value>
            <value>
                <fullName>Core HM</fullName>
            </value>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>Travel Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>