knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Type_of_Job__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Job__c</fullName>
    <description>Picklist, to be taken from Bullhorn&apos;s Custom Text 19</description>
    <label>Type of Job</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff Physician - DO</fullName>
            </value>
            <value>
                <fullName>Staff Physician - MD</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Medical Director</fullName>
            </value>
            <value>
                <fullName>Assistant Medical Director</fullName>
            </value>
            <value>
                <fullName>Lead NP</fullName>
            </value>
            <value>
                <fullName>Lead PA</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Physician Advisor</fullName>
            </value>
            <value>
                <fullName>Travel Physician</fullName>
            </value>
            <value>
                <fullName>Telehospitalist</fullName>
            </value>
            <value>
                <fullName>Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Licensed Practical Nurse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>