knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Vacancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Reason__c</fullName>
    <description>The reason for the vacancy</description>
    <inlineHelpText>The reason for the vacancy</inlineHelpText>
    <label>Vacancy Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attrition_Recruit_Over</fullName>
                <label>Attrition - Recruit Over</label>
            </value>
            <value>
                <fullName>Attrition - Resignation</fullName>
            </value>
            <value>
                <fullName>Attrition - Termination</fullName>
            </value>
            <value>
                <fullName>Growth - New Coverage</fullName>
            </value>
            <value>
                <fullName>Growth - Startup</fullName>
            </value>
            <value>
                <fullName>Recruit Over</fullName>
                <isActive>false</isActive>
                <label>Recruit Over</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>