knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Vacancy_Reson__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Reson__c</fullName>
    <label>Vacancy Reson</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attrition - Resignation</fullName>
            </value>
            <value>
                <fullName>Attrition - Termination</fullName>
            </value>
            <value>
                <fullName>Growth - New Coverage</fullName>
            </value>
            <value>
                <fullName>Growth - Startup</fullName>
            </value>
            <value>
                <fullName>Recruit Over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>