knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Visa_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Visa_Sponsorship__c</fullName>
    <description>Used on Job Board to help filter whether Visas are sponsored on a Job</description>
    <label>Visa Sponsorship?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>