knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/VisaSponsorship__c.field-meta.xml
<CustomField>
    <fullName>VisaSponsorship__c</fullName>
    <description>VisaSponsorship Field for XML to DocCafe</description>
    <inlineHelpText>VisaSponsorship for DocCafe</inlineHelpText>
    <label>VisaSponsorship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>