knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/VPO2__c.field-meta.xml
<CustomField>
    <fullName>VPO2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VPO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs2</relationshipName>
    <type>Lookup</type>
</CustomField>