knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Work_Environment__c.field-meta.xml
<CustomField>
    <fullName>Work_Environment__c</fullName>
    <description>Work Environment for DocCafe XML Feed</description>
    <inlineHelpText>Work Environment for DocCafe</inlineHelpText>
    <label>Work Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>