knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/validationRules/Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type</fullName>
    <active>true</active>
    <description>All SCP jobs need to be associated with a Service Line account.</description>
    <errorConditionFormula>Facility_Name__r.RecordTypeName__c  &lt;&gt; &quot;Service_Account&quot;</errorConditionFormula>
    <errorMessage>Facility must be of record type &quot;Service Account&quot;.</errorMessage>
</ValidationRule>