knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/validationRules/Cancel_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Reason</fullName>
    <active>true</active>
    <description>If a job status is set to canceled, then I a cancel will be required.</description>
    <errorConditionFormula>AND (ISPICKVAL(bpats__Status__c,&quot;Canceled&quot;),
ISBLANK(Text( Cancel_Reason__c )))</errorConditionFormula>
    <errorDisplayField>Cancel_Reason__c</errorDisplayField>
    <errorMessage>If a job status is set to canceled, a cancel reason is required.</errorMessage>
</ValidationRule>