knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/validationRules/Post_Externally.validationRule-meta.xml
<ValidationRule>
    <fullName>Post_Externally</fullName>
    <active>false</active>
    <errorConditionFormula>AND (bpats__Post_Externally__c = True, 
OR (
ISBLANK ( Facility_Name__c ),
ISBLANK ( Facility_Title_Lookup__c ),
ISBLANK (  Monthly_Hours_Requested__c  ),
ISBLANK (  Text (Open_to_Residents__c  )),
ISBLANK (  Text (Planned_Status__c  )),
ISBLANK (  Text (Vacancy_Reason__c ) ),
ISBLANK (  bpats__Number_of_Openings__c  )
))</errorConditionFormula>
    <errorMessage>For an external job, fill in: Facility Name, Facility Title, Monthly Hours Requested, Open To Residents?, Planned Status, Vacancy Reason, Number of Openings.</errorMessage>
</ValidationRule>